# Arcanum-Service

./: .env  Arcanum.sqlite  Cargo.toml  README.md  create_schema.sql
src/: main.rs
src/handlers/: error_handlers.rs  mod.rs
src/models/: Attribute.rs  character.rs  json_response.rs  mod.rs  tenant.rs  tenet.rs
src/routes/: attribute.rs  health.rs  mod.rs  tenant.rs  tenet.rs
src/utils/: json.rs  middleware.rs  mod.rs  response_utils.rs
