[package]
name = "Arcanum-Service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.6.20", features = ["headers"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
sqlx = { version = "0.8.5",features = ["runtime-tokio","sqlite"] }
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0",features = ["v4"] }
